# Prumo

./: .gitignore  README.MD  config.py  email_sender.py  email_template.html  pyproject.toml  requirements.txt
forecast_data/: de_para_planejamento.csv  previsao_despesas.csv  previsao_receitas.csv
src/orcamento/: main.py
src/orcamento/core/: config.py  logging_config.py
src/orcamento/core/processing/: financial_analysis.py
src/orcamento/data_access/: database.py  queries.py
src/orcamento/data_access/mdx/: planejamento_ppa.mdx
src/orcamento/data_access/sql/: despesas.sql  planejamento_despesas.sql  planejamento_ppa.sql  planejamento_receitas.sql  receitas.sql
src/orcamento/forecast_data/: previsao_despesas.csv  previsao_receitas.csv
src/orcamento/processing/: financial_analysis.py
src/orcamento/reporting/: email_sender.py  formatting.py
src/orcamento/reporting/templates/: email_template.html
